{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 45,
  "lineage": "134a377b-3987-807f-c803-d20051a1ea0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mavmeuh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0259333aec231062d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7a4e87939439934",
            "arn": "arn:aws:ec2:us-east-1:156885215539:instance/i-0f0493bc41061e5f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0493bc41061e5f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d216a1ae90d9ddd",
            "private_dns": "ip-172-31-40-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.250",
            "public_dns": "ec2-54-89-116-16.compute-1.amazonaws.com",
            "public_ip": "54.89.116.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-063b3d94ed22fca9f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0259333aec231062d",
            "tags": {
              "Name": "mavmeuh"
            },
            "tags_all": {
              "Name": "mavmeuh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09014e853b8d7d762"
            ]
          },
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        },
        {
          "index_key": "subnet-05ddb429c8a79cac1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7a4e87939439934",
            "arn": "arn:aws:ec2:us-east-1:156885215539:instance/i-0a6c0e485dbcaef3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6c0e485dbcaef3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e402a185ac53d1a",
            "private_dns": "ip-172-31-93-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.93.49",
            "public_dns": "ec2-3-89-107-241.compute-1.amazonaws.com",
            "public_ip": "3.89.107.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02dc6af19b934cd7d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "admin_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ddb429c8a79cac1",
            "tags": {
              "Name": "mavmeuh"
            },
            "tags_all": {
              "Name": "mavmeuh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09014e853b8d7d762"
            ]
          },
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156885215539:security-group/sg-09014e853b8d7d762",
            "description": "Allow SSH from admins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09014e853b8d7d762",
            "ingress": [
              {
                "cidr_blocks": [
                  "1.1.1.1/32",
                  "8.8.8.8/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "92.151.128.188/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "admin_ssh",
            "name_prefix": "",
            "owner_id": "156885215539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin_ssh"
            },
            "tags_all": {
              "Name": "admin_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-022f458c280ac21a5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156885215539:security-group-rule/sgr-06a9e222c58f3b31b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06a9e222c58f3b31b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09014e853b8d7d762",
            "security_group_rule_id": "sgr-06a9e222c58f3b31b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156885215539:security-group-rule/sgr-076916f3a39734aa2",
            "cidr_ipv4": "92.151.128.188/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-076916f3a39734aa2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09014e853b8d7d762",
            "security_group_rule_id": "sgr-076916f3a39734aa2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1.1.1.1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156885215539:security-group-rule/sgr-0b20321da3cee7fb6",
            "cidr_ipv4": "1.1.1.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b20321da3cee7fb6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09014e853b8d7d762",
            "security_group_rule_id": "sgr-0b20321da3cee7fb6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        },
        {
          "index_key": "8.8.8.8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156885215539:security-group-rule/sgr-028d28d4d3cd4656b",
            "cidr_ipv4": "8.8.8.8/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-028d28d4d3cd4656b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09014e853b8d7d762",
            "security_group_rule_id": "sgr-028d28d4d3cd4656b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.admin_ssh"
          ]
        }
      ]
    }
  ]
}